--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,3 @@
-#spring.datasource.url=jdbc:mysql://62.171.129.117:3306/streetgoods
-#spring.datasource.username=Kamal
-#spring.datasource.password=AdaptiveSystems
-
-spring.datasource.url=jdbc:mysql://localhost:3306/streetgoods
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://62.171.129.117:3306/streetgoods
+spring.datasource.username=Kamal
+spring.datasource.password=AdaptiveSystems
