--- a/pom.xml
+++ b/pom.xml
@@ -57,11 +57,11 @@
 			<artifactId>hibernate-types-5</artifactId>
 			<version>1.2.0</version>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>com.app</groupId>
 			<artifactId>streetgoods</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+		</dependency> -->
     </dependencies>
 
 	<build>
