added CEST server time support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://62.171.129.117:3306/streetgoods
+spring.datasource.url=jdbc:mysql://62.171.129.117:3306/streetgoods?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Rome
 spring.datasource.username=Kamal
 spring.datasource.password=AdaptiveSystems
 
